# ROSBot_XL_mazesolver

./: .gitignore  ReadMe.md  default.rviz
distance_controller/: CMakeLists.txt  package.xml
distance_controller/config/: pid_sim.yaml
distance_controller/src/: distance_controller.cpp  laserscn.cpp
misl/: waypoint_recorder_json.py  waypoint_recorder_json_0.2.py  waypoint_recorder_txt.py  waypoint_recorder_yaml.py  waypoints.json
misl/real/: waypoints.yaml  waypoints_2.0.json
misl/sim/: sim_waypoints.yaml
pid_maze_solver/: CMakeLists.txt  package.xml  setup.py
pid_maze_solver/config/: real.yaml  real_2.yaml  sim.yaml  sim_2.yaml
pid_maze_solver/include/pid_maze_solver/: OLDpid_maze_solver copy.hpp  pid.hpp  pid_maze_solver.hpp
pid_maze_solver/launch/: rviz.launch.py
pid_maze_solver/rviz/: default.rviz
pid_maze_solver/scripts/: scan_marker.py  scan_marker_all_dir.py  scan_marker_all_dir_wheels.py
pid_maze_solver/src/: laser.cpp  others_2_pid_maze_solver.cpp  pid_maze_solver copy.cpp  pid_maze_solver.cpp  pid_maze_solver_2.cpp  pid_maze_solver_cd.cpp  pid_maze_solver_cd_fo.cpp  pid_maze_solver_cd_fo_yc.cpp  pid_maze_solver_f.cpp  pid_maze_solver_simple.cpp
pid_maze_solver/waypoints/: rev_waypoints_sim.yaml  waypoints_real.yaml  waypoints_sim.yaml
resources/: recorded_waypoints.md  scan_bay.csv  scan_bay_1.csv  scan_bay_2.csv
resources/waypoints/: Xreal_waypoints.json  maze_waypoints_real.yaml  maze_waypoints_sim.yaml  real_waypoints.json  real_waypoints.yaml  real_waypoints_0.2.json  real_waypoints_d.json  real_waypoints_d.yaml  real_waypoints_t.yaml  rev_maze_waypoints_real.yaml  rev_maze_waypoints_sim.yaml  sim_relative_wp.ods  sim_waypoints.json  sim_waypoints.txt  sim_waypoints.yaml  sim_waypoints_0.2.json  sim_waypoints_d.yaml  sim_waypoints_t.yaml
turn_controller/: CMakeLists.txt  package.xml
turn_controller/src/: turn_controller.cpp
